--- a/pages/pssi/2451.qmd
+++ b/pages/pssi/2451.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Relative reproductive success of hatchery- versus natural-origin salmon in Canadian integrated populations"
+title: "Fitness effects of hatchery enhancement and relative reproductive success"
 output-file: "2451.html"
 Leads: "Eric Rondeau, Tim Healy, Kyle Wellband"
 toc: true
@@ -12,7 +12,7 @@ toc: true
 **Organization:** DFO  
 **Session(s):** Hatchery Fitness And Genetics  
 **Presentation Date(s):** December 11, 2025  
-**Speakers:** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Speakers:** Tim Healy  
 **Abstract:**  
 Salmon bred from a hatchery are often less fit in wild environments than naturally bred salmon. However, this situation can change using different hatchery methods. This genetic study compares DNA samples from returning hatchery Chinook to natural Chinook in Sarita River to see if hatchery methods improve the spawning success of hatchery Chinook.   
 
