--- a/pages/pssi/2453.qmd
+++ b/pages/pssi/2453.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Epigenetic variation between hatchery- and natural-origin Canadian Chinook Salmon"
+title: "Epigenetic variation and inheritance in hatchery- and natural-origin Chinook and Coho salmon"
 output-file: "2453.html"
 Leads: "Eric Rondeau, Tim Healy, Kyle Wellband"
 toc: true
@@ -12,7 +12,7 @@ toc: true
 **Organization:** DFO  
 **Session(s):** Hatchery Fitness And Genetics  
 **Presentation Date(s):** December 11, 2025  
-**Speakers:** Eric Rondeau, Tim Healy, Kyle Wellband  
+**Speakers:** Tim Healy, Kyle Wellband  
 **Abstract:**  
 There are few genetic differences between hatchery-bred and natural salmon in populations enhanced by the Salmonid Enhancement Program (SEP), but structural modifications to genes may affect gene expression and impact salmon fitness in the wild. This genetic sequencing study gathers Chinook samples from hatcheries at the Nicola, Quinsam, Sarita, Atnarko, and Chilliwack rivers to compare epigenetic (methylation) differences between hatchery and wild Chinook to better monitor the proportion of hatchery salmon in a river.   
 
