--- a/pages/pssi/3498.qmd
+++ b/pages/pssi/3498.qmd
@@ -1,19 +1,19 @@
 ---
-title: "Untitled Project"
+title: "Enhanced Monitoring of Chinook Salmon Mark Selective Fishery (MSF)"
 output-file: "3498.html"
-Leads: "N/A"
+Leads: "Phil Lemp, Erin Rechisky"
 toc: true
 ---
 
 ## PSSI Project Summary
 
-**Division:** N/A  
-**Section:** N/A  
+**Division:** Stock Assessment and Research (StAR)  
+**Section:** South Coast Area Salmon Stock Assessment  
 **Organization:** DFO  
 **Session(s):** Fisheries Monitoring And Harvest Methods  
 **Presentation Date(s):** December 09, 2025  
 **Speakers:** Phil Lemp, Erin Rechisky  
 **Abstract:**  
-No abstract available   
+In 2023, Fisheries and Oceans Canada launched a multi-year monitoring program to understand the effects of mark-selective fisheries (MSFs) on Chinook salmon in the South Coast Area. The Chinook reference fishery was initiated to independently verify Chinook salmon catch estimates, hatchery mark rates, and stock composition in MSFs and compare those estimates to those of the South Coast Area recreational catch monitoring program.   
 
 
