Added recording links to website

--- a/index.qmd
+++ b/index.qmd
@@ -78,6 +78,8 @@ Join us this December for a series of online sessions sharing knowledge and outc
 ## 📅 December 02, 2025
 </div>
 
+📹 [Watch the recording](https://086gc-my.sharepoint.com/:v:/g/personal/joe_enns_dfo-mpo_gc_ca/IQCEMkFiO-ipT4wgAOvI-CeuAZL3DBmJE78fj-EWK6mzWSk?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=9vKcfy){.btn .btn-outline-secondary .btn-sm}
+
 ### Salmon In A Changing Climate {#-almon-n-hanging-limate}
 Improving our understanding of the long-term implications of climate change for Pacific Salmon and their ecosystems.
 
