--- a/pages/pssi/2449.qmd
+++ b/pages/pssi/2449.qmd
@@ -12,7 +12,7 @@ toc: true
 **Organization:** DFO  
 **Session(s):** Data And Modelling To Support Decision Making  
 **Presentation Date(s):** December 09, 2025  
-**Speakers:** Carrie Holt, Brendan Connors, Catarina Wor  
+**Speakers:** Carrie Holt  
 **Abstract:**  
 Resource managers rely on decision modelling tool and programs to predict the outcomes from different actions. For salmon management, often these tools fail to include hatchery or habitat parameters. This decision-support project develops an open source, single-population prototype model that can be applied to West Coast Vancouver Island Chinook as a case study, including hatchery and habitat levers, as well as, uncertainty and risk.   
 
