--- a/index.qmd
+++ b/index.qmd
@@ -86,12 +86,12 @@ Improving our understanding of the long-term implications of climate change for 
 **Time:** 10AM-12PM  
 **Location:** Online Webinar and Pacific Science Enterprise Centre (PSEC), West Vancouver  
 **Chair:** Patrick Thompson  
-[Register for Webinar](https://events.teams.microsoft.com/event/1f2df8a8-252e-47f7-8df1-a6096b1fa578@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/1f2df8a8-252e-47f7-8df1-a6096b1fa578@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **Introduction** | Cory Lagasse
 - **00:06:30** - 🌊 [Changing coastal productivity: Using sediment cores, water properties and archived plankton data to identify changes at the bottom of the food web in BC’s coastal waters](pages/pssi/2406.html) | Sophia Johannessen | DFO
+- **00:14:10** - 🌊 [Adaptive genetic variation and climate change resilience in Canadian Pacific salmon](pages/pssi/2437.html) | Tim Healy | DFO
 - **00:23:40** - 🌱 [Evaluating climate change scenarios for the Quesnel Watershed to determine flood, fire and temperature risks posed to Upper Fraser salmon stocks](pages/bcsrif/BCSRIF_2022_399.html) | Ellen Petticrew | University of Northern British Columbia, Department of Geography, Earth and Environmental Sciences and UNBC’s Quesnel River Research Centre
-- **00:38:55** - 🌊 [Adaptive genetic variation and climate change resilience in Canadian Pacific salmon](pages/pssi/2437.html) | Tim Healy | DFO
 - **00:54:20** - 🌱 [Supporting Climate-Resilient Salmon Ecosystems: from Modelling to Monitoring](pages/bcsrif/BCSRIF_2022_401.html) | Marc Porter, Kathleen Belton, Stephanie Peacock | Salmon Watersheds Program, Pacific Salmon Foundation
 - **01:07:10** - 🌊 [Insights into the effects of marine and freshwater variables on salmon population dynamics: A hierarchical lifecycle approach](pages/pssi/2405.html) | Jan Finke | DFO
 - **01:23:00** - 🌱 [Development of High-resolution Climate Change Freshwater Hazard Data for BC](pages/bcsrif/BCSRIF_2022_384.html) | Markus Schnorbus | Pacific Climate Impacts Consortium
@@ -103,16 +103,16 @@ Mechanistic, physiological, and quantitative studies for evaluating stressors to
 **Time:** 1PM-3PM  
 **Location:** Online Webinar and Pacific Science Enterprise Centre (PSEC), West Vancouver  
 **Chair:** David Patterson  
-[Register for Webinar](https://events.teams.microsoft.com/event/1f2df8a8-252e-47f7-8df1-a6096b1fa578@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/1f2df8a8-252e-47f7-8df1-a6096b1fa578@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **Introduction** | Chantelle Caron
+- **00:31:08** - 🌊 [Habitat use and predation on juvenile Chinook Salmon in the Canadian Okanagan River and Lake system](pages/pssi/2442.html) | Tommy Pontbriand | DFO
 - **01:48:15** - 🌱 [First Nations led salmon habitat and population monitoring, research and cumulative effects assessment in the Lower Fraser River and Boundary Bay](pages/bcsrif/BCSRIF_2022_334.html) | Dave Scott | Salish Sea Indigenous Guardians Association
 - **02:03:00** - 🌊 [Mechanistic modelling to link hydrology to juvenile salmon habitat quality and productivity](pages/pssi/2424.html) | Sean Naman | DFO
 - **02:21:30** - 🌱 [Developing a cumulative effects modelling framework for the recovery of aquatic salmonid populations](pages/bcsrif/BCSRIF_2020_217.html) | Jordan Rosenfeld | University of British Columbia (Vancouver), Institute for the Oceans and Fisheries
 - **02:40:00** - 🌊 [Improved understanding of cumulative impacts on salmon survival across freshwater life-stages; tools and approaches for mechanistic assessments](pages/pssi/2493.html) | David Patterson, Douglas Braun | DFO
 - **02:57:30** - 🌊 [Development of geospatial tools for large-scale freshwater salmon habitat assessment by the Freshwater Spatial Ecology Program](pages/pssi/2425.html) | Keegan Paterson | DFO
 - **03:17:05** - 🌱 [Cumulative effects of forest harvest on Pacific salmon productivity in coastal British Columbia](pages/bcsrif/BCSRIF_2022_449.html) | Maria Kuruvilla | University of Victoria
-- **03:29:20** - 🌊 [Habitat use and predation on juvenile Chinook Salmon in the Canadian Okanagan River and Lake system](pages/pssi/2442.html) | Tommy Pontbriand | DFO
 - **03:41:30** - 🎤 Panel Q and A | Freshwater Stressors
 
 
@@ -128,12 +128,12 @@ A review of the Follow the Fish Program, including methods and approaches for li
 **Time:** 9:30AM-12PM  
 **Location:** Online Webinar and Institute of Ocean Sciences (IOS), Sidney  
 **Chair:** Isobel Pearsall  
-[Register for Webinar](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **Introduction** | Wilf Luedke, Nicholas Brown
 - **00:23:30** - 🌊 [Development and application of laser ablation-inductively coupled plasma-mass spectrometry to determine estuary entry size of juvenile salmonids and track habitat usage](pages/pssi/2422.html) | Nicole LaForge, Micah Quindazzi  | DFO
 - **00:41:00** - 🌊 [Characterizing juvenile Chinook salmon distribution, diet and health on the West Coast of Vancouver Island](pages/pssi/2407.html) | Jessy Bokvist | DFO
-- **01:00:00** - 🌊 [Innovative Ecosystem Based Approaches to identify cumulative stressors: Salmon Fit-Chips and eDNA](pages/pssi/2447.html) | Arthur Bass, Christoph Deeg | DFO
+- **01:04:15** - 🌊 [Innovative Ecosystem Based Approaches to identify cumulative stressors: Salmon Fit-Chips and eDNA](pages/pssi/2447.html) | Arthur Bass, Christoph Deeg | DFO
 - **01:42:00** - 🌱 [Identifying factors that influence early marine survival of WCVI Chinook salmon](pages/bcsrif/BCSRIF_2022_442.html) | Mack Bartlett | Uvic
 - **01:55:30** - 🌊 [Identifying good practices for considering Indigenous Knowledge in Rebuilding Plan targets and stock assessment reference points](pages/pssi/2397.html) | Jared Dick | Nuu-Chah-Nulth Tribal Council
 
@@ -143,7 +143,7 @@ Research on stressors in nearshore marine ecosystems and their effects on salmon
 **Time:** 1PM-4PM  
 **Location:** Online Webinar and Institute of Ocean Sciences (IOS), Sidney  
 **Chair:** Cameron Freshwater  
-[Register for Webinar](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/038709c6-a551-4faa-8957-8f56a8b7f32b@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **02:22:15** - 🌱 [An overview of the Bottlenecks to Survival program with a focus on marine monitoring, tagging, and biological sampling](pages/bcsrif/BCSRIF_2019_040.html) | Sam James, Jamieson Atkinson  | Pacific Salmon Foundation
 - **02:37:30** - 🌊 [Improving baseline knowledge of environmental conditions in Vancouver Islands fjords through observations and modelling, with a focus on hypoxia dynamics, climate change, and the potential implications for Pacific salmon](pages/pssi/2404.html) | Laura Bianucci, Marilena Geng | DFO
@@ -167,14 +167,14 @@ Projects piloting new methods for selective salmon harvest and informing fisheri
 **Time:** 10AM-12PM  
 **Location:** Online Webinar Only  
 **Chair:** Nicholas Brown  
-[Register for Webinar](https://events.teams.microsoft.com/event/2b7462ee-b28d-4f73-b4df-4a48d954cdb3@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/2b7462ee-b28d-4f73-b4df-4a48d954cdb3@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **Introduction** | Mike Hawkshaw
 - **00:07:34** - 🌱 [Empowering Indigenous community fisheries with deep learning - computer vision for adaptive management of terminal salmon fisheries](pages/bcsrif/BCSRIF_2019_045.html) | Will Atlas | Pacific Salmon Foundation
 - **00:27:06** - 🌱 [FRIM – Short term mortality holding and respirometry studies](pages/bcsrif/BCSRIF_2022_454.html) | Owen Bird | Sport Fishing Institute of BC
 - **00:44:15** - 🌊 [Quantifying Yukon Chinook migration mortality and its implications for fisheries management and rebuilding under the Fish Stock Provisions of the Fisheries Act](pages/pssi/2402.html) | Brendan Connors, Adam O'Dell | DFO
+- **00:47:16** - 🌊 [Enhanced Monitoring of Chinook Salmon Mark Selective Fishery (MSF)](pages/pssi/3498.html) | Phil Lemp, Erin Rechisky | DFO
 - **01:01:06** - 🌱 [Mortality of released Pacific Salmon in the marine recreational fishery: new science and recommendations](pages/bcsrif/BCSRIF_2019_058.html) | Steve Johnston | Pacific Salmon Ecology and Conservation Laboratory, UBC
-- **01:15:22** - 🌊 [Enhanced Monitoring of Chinook Salmon Mark Selective Fishery (MSF)](pages/pssi/3498.html) | Phil Lemp, Erin Rechisky | DFO
 - **01:31:21** - 🌱 [First Nations-led catch monitoring to inform sustainable mixed-stock fisheries management on the Central Coast](pages/bcsrif/BCSRIF_2020_292.html) | Megan Adams | Central Coast Indigenous Resource Alliance
 - **01:47:42** - 🎤 Panel Q and A | Fisheries Monitoring And Harvest Methods
 
@@ -184,10 +184,10 @@ Databases, analytic tools, and modelling projects that provide information to su
 **Time:** 1PM-3PM  
 **Location:** Online Webinar Only  
 **Chair:** Carrie Holt  
-[Register for Webinar](https://events.teams.microsoft.com/event/2b7462ee-b28d-4f73-b4df-4a48d954cdb3@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/2b7462ee-b28d-4f73-b4df-4a48d954cdb3@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **Introduction** | Mike Hawkshaw
-- **02:06:28** - 🌊 [Same Salmon, Shared Semantics. The DFO Salmon Ontology for Data Integration and Decision Support](pages/pssi/2546.html) | Brett Johnson | DFO
+- **01:04:15** - 🌊 [Same Salmon, Shared Semantics. The DFO Salmon Ontology for Data Integration and Decision Support](pages/pssi/2546.html) | Brett Johnson | DFO
 - **02:28:04** - 🌱 [The Bottlenecks to Survival Project: An open-source framework for end-to-end biological data management](pages/bcsrif/BCSRIF_2022_456.html) | Sam James, Brahm White-Gluz | Pacific Salmon Foundation
 - **02:45:31** - 🌱 [Democratizing Salmon Data through the Expansion of the Pacific Salmon Explorer](pages/bcsrif/BCSRIF_2020_279.html) | Leah Honka and Eric Hertz | Pacific Salmon Foundation
 - **03:00:49** - 🌊 [A decision-support tool that considers harvest, hatchery, and habitat management levers to support implementation of the Fisheries Act for Pacific salmon](pages/pssi/2449.html) | Carrie Holt | DFO
@@ -200,23 +200,25 @@ Databases, analytic tools, and modelling projects that provide information to su
 ## 📅 December 11, 2025
 </div>
 
+📹 [Watch the recording (timestamps below)](https://086gc-my.sharepoint.com/:v:/g/personal/joe_enns_dfo-mpo_gc_ca/IQD96NQRIeVfQqeW4AJ0jyHLAe7abJHf8ZrBKmZp9E5-s0w?nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=BhHLbK){.btn .btn-outline-secondary .btn-sm}
+
 ### Hatchery Fitness And Genetics {#-atchery-itness-nd-enetics}
 Research on the genetic and fitness consequences of hatchery enhancment, and the interactions between hatchery and wild salmon.
 
 **Time:** 10AM-12PM  
 **Location:** Online Webinar Only  
 **Chair:** Tim Healy  
-[Register for Webinar](https://events.teams.microsoft.com/event/b685712a-d089-4f8f-8b6a-a6b7953ff0da@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/b685712a-d089-4f8f-8b6a-a6b7953ff0da@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **Introduction** | Adam Silverstein, Alison Krimmer
-- **10:15 AM** - 🌊 [Fitness effects of hatchery enhancement and relative reproductive success](pages/pssi/2451.html) | Tim Healy | DFO
-- **10:30 AM** - 🌊 [Epigenetic variation and inheritance in hatchery- and natural-origin Chinook and Coho salmon](pages/pssi/2435.html) | Tim Healy, Kyle Wellband | DFO
-- **10:30 AM** - 🌊 [Epigenetic variation and inheritance in hatchery- and natural-origin Chinook and Coho salmon](pages/pssi/2453.html) | Tim Healy, Kyle Wellband | DFO
-- **10:45 AM** - 🌊 [Ten years of hatchery broodstock genotyping and parentage-based tagging](pages/pssi/2545.html) | Eric Rondeau | DFO
-- **11:00 AM** - 🌊 [Increasing genetic resolution in southern BC chum enabled by whole genome data](pages/pssi/2436.html) | Anna Tigano | DFO
-- **11:15 AM** - 🌊 [Rapid broodstock screening for improved genetic management of Pacific Salmon](pages/pssi/2434.html) | Kyle Wellband | DFO
-- **11:30 AM** - 🌱 [Causes and consequences of vateritic otoliths in hatchery-reared Coho salmon](pages/bcsrif/BCSRIF_2020_239.html) | Leigh Gaffney | University of Victoria, Department of Biology
-- **11:45AM-12:05PM** - 🎤 Panel Q and A | Hatchery Fitness And Genetics
+- **00:14:10** - 🌊 [Fitness effects of hatchery enhancement and relative reproductive success](pages/pssi/2451.html) | Tim Healy | DFO
+- **00:31:08** - 🌊 [Epigenetic variation and inheritance in hatchery- and natural-origin Chinook and Coho salmon](pages/pssi/2435.html) | Tim Healy, Kyle Wellband | DFO
+- **00:31:08** - 🌊 [Epigenetic variation and inheritance in hatchery- and natural-origin Chinook and Coho salmon](pages/pssi/2453.html) | Tim Healy, Kyle Wellband | DFO
+- **00:47:16** - 🌊 [Ten years of hatchery broodstock genotyping and parentage-based tagging](pages/pssi/2545.html) | Eric Rondeau | DFO
+- **01:04:15** - 🌊 [Increasing genetic resolution in southern BC chum enabled by whole genome data](pages/pssi/2436.html) | Anna Tigano | DFO
+- **01:19:46** - 🌊 [Rapid broodstock screening for improved genetic management of Pacific Salmon](pages/pssi/2434.html) | Kyle Wellband | DFO
+- **01:35:31** - 🌱 [Causes and consequences of vateritic otoliths in hatchery-reared Coho salmon](pages/bcsrif/BCSRIF_2020_239.html) | Leigh Gaffney | University of Victoria, Department of Biology
+- **01:59:01** - 🎤 Panel Q and A | Hatchery Fitness And Genetics
 
 ### Fish Health {#-ish-ealth}
 Tools and research to support monitoring and managing the health of cultured salmon.
@@ -224,14 +226,14 @@ Tools and research to support monitoring and managing the health of cultured sal
 **Time:** 1PM-3PM  
 **Location:** Online Webinar Only  
 **Chair:** Christoph Deeg  
-[Register for Webinar](https://events.teams.microsoft.com/event/b685712a-d089-4f8f-8b6a-a6b7953ff0da@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
+[Visit Webinar Page](https://events.teams.microsoft.com/event/b685712a-d089-4f8f-8b6a-a6b7953ff0da@1594fdae-a1d9-4405-915d-011467234338){.btn .btn-primary}
 
 - **Introduction** | Adam Silverstein, Alison Krimmer
-- **1:15 PM** - 🌱 [Investigation into molecular tools and how they could be applied in hatchery management](pages/bcsrif/BCSRIF_2019_136.html) | Samantha James | Pacific Salmon Foundation
-- **1:30 PM** - 🌊 [Evaluating the usability of stress hormones in scales as biomarkers of chronic stress in Chinook Salmon smolts](pages/pssi/2421.html) | Reid Williams | DFO
-- **1:45 PM** - 🌊 [Improvement, Expansion and Modernization of Salmonid Health Diagnostic Services For Optimizing Salmonid Hatchery Health Management.](pages/pssi/2408.html) | Amy Long | DFO
-- **2:00 PM** - 🌊 [Developing a proactive, modernized, holistic approach to ensure optimal health and condition of Hatchery Production ](pages/pssi/2448.html) | Karia Kaukinen | DFO
-- **2:15 PM** - 🌊 [Optimization of feeds used in the hatchery production of Pacific Salmon.](pages/pssi/2417.html) | Erika Eliason | DFO
-- **2:30 PM** - 🌱 [The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries](pages/bcsrif/BCSRIF_2020_311.html) | Ahmed Siah | BC Centre for Aquatic Health Sciences Society
-- **2:45-3:15PM** - 🎤 Panel Q and A | Fish Health
+- **02:32:35** - 🌱 [Investigation into molecular tools and how they could be applied in hatchery management](pages/bcsrif/BCSRIF_2019_136.html) | Samantha James | Pacific Salmon Foundation
+- **02:49:34** - 🌊 [Evaluating the usability of stress hormones in scales as biomarkers of chronic stress in Chinook Salmon smolts](pages/pssi/2421.html) | Reid Williams | DFO
+- **03:06:43** - 🌊 [Improvement, Expansion and Modernization of Salmonid Health Diagnostic Services For Optimizing Salmonid Hatchery Health Management.](pages/pssi/2408.html) | Amy Long | DFO
+- **03:23:45** - 🌊 [Developing a proactive, modernized, holistic approach to ensure optimal health and condition of Hatchery Production ](pages/pssi/2448.html) | Karia Kaukinen | DFO
+- **03:37:32** - 🌊 [Optimization of feeds used in the hatchery production of Pacific Salmon.](pages/pssi/2417.html) | Erika Eliason | DFO
+- **03:53:42** - 🌱 [The application of nanopore technology for the rapid detection and characterization of pathogenic organisms in enhancement hatcheries](pages/bcsrif/BCSRIF_2020_311.html) | Ahmed Siah | BC Centre for Aquatic Health Sciences Society
+- **04:10:20** - 🎤 Panel Q and A | Fish Health
 
